# AmadeusEmployees

./: BuildAndRun.sh  CMakeLists.txt  CMakePresets.json  README.md
include/: Employee.h
inputFiles/: employees.json  employees.xml
inputFiles/errorFiles/: employeesNoId.json  employeesNoId.xml  employeesNoSalary.json  employeesNoSalary.xml
outputFiles/: outputFile.txt
src/: Employee.cpp  main.cpp
